src/objects/Request__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a set of features that provides the ability to handle a capability.</description>
    <fields>
        <fullName>Adapt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of hours estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of hours estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agile_Status__c</fullName>
        <description>This field is to show combined status from Requirement status field.</description>
        <label>Agile Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#FF0000</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#FF9900</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Done</fullName>
                    <color>#006600</color>
                    <label>Done</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <color>#3366FF</color>
                    <label>Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_by_CCB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by CCB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BA_Functional_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to enter the responsible functional lead for this requirement.</description>
        <inlineHelpText>Please enter the responsible functional lead for this requirement.</inlineHelpText>
        <label>BA/Functional Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BUT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of hours estimated to complete Build and Unit Test phase.</description>
        <inlineHelpText>Number of hours estimated to complete Build and Unit Test phase.</inlineHelpText>
        <label>Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Completion_Date__c</fullName>
        <description>Date by when the build of a requirement is completed, unit tested and available in SIT environment for further test</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date by when the build of a requirement is completed, unit tested and available in SIT environment for further test</inlineHelpText>
        <label>Actual Build Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for build of the request</description>
        <label>Build Total</label>
        <summarizedField>Application_Inventory__c.Total_Build__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <description>Value is calculated by the selection of the Business Benefit field.</description>
        <formula>CASE( 
Business_Benefit__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Business Benefit field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Business Benefit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <description>Shows type of benefit which business is going to have from the request</description>
        <label>Business Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agility</fullName>
                </value>
                <value>
                    <fullName>Basic Capability</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Efficiency</fullName>
                </value>
                <value>
                    <fullName>Insight</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Simplification</fullName>
                </value>
                <value>
                    <fullName>Transparency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Value_Details__c</fullName>
        <description>This is a Required Field for scoping.  Includes the details of why this request would be implemented, and the expected business value</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is a Required Field for scoping.  Includes the details of why this request would be implemented, and the expected business value</inlineHelpText>
        <label>Business Value Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CCB_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCB Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCB_Request_Detail__c</fullName>
        <description>additional CCB request details</description>
        <inlineHelpText>Details on Type of CCB request</inlineHelpText>
        <label>CCB Request Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>request to defer</fullName>
                </value>
                <value>
                    <fullName>request to close</fullName>
                </value>
                <value>
                    <fullName>request for customization approval (CCB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <description>Category of the request</description>
        <inlineHelpText>Emergency: A known error in existing functionality 
Feature/Function: Enhancement or modification to an existing functionality 
New Capability: New functionality to support process 
Ongoing Maintenance: Activities that need to be performed regularly</inlineHelpText>
        <label>Capacity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Feature/Function</fullName>
                </value>
                <value>
                    <fullName>New Capability</fullName>
                </value>
                <value>
                    <fullName>Ongoing Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChM_Target_Group_Change_Impact__c</fullName>
        <description>Feld indicates if there is any impact out of the requirement to End or Key user</description>
        <label>ChM Target Group / Change Impact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Key User</fullName>
                </value>
                <value>
                    <fullName>No Change Impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Impact_Description__c</fullName>
        <description>Description entered on the impact of the requirement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Impact Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Request_ID__c</fullName>
        <description>Shows Client Request ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Request ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Deferred_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed/Deferred Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Deferred__c</fullName>
        <description>Reason of closing or deferring the request</description>
        <label>Reason Closed/Deferred</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deferred: Waiting Architecture Availabiity</fullName>
                </value>
                <value>
                    <fullName>Deferred: Product Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>Deferred: Waiting Approval</fullName>
                </value>
                <value>
                    <fullName>Closed: Architecturally Not Recommended</fullName>
                </value>
                <value>
                    <fullName>Closed: Satisfied Through Business Process Change</fullName>
                </value>
                <value>
                    <fullName>Closed: Canceled by Business</fullName>
                </value>
                <value>
                    <fullName>Closed: Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed: Technically Not Feasible</fullName>
                </value>
                <value>
                    <fullName>Closed: Existing Functionality</fullName>
                </value>
                <value>
                    <fullName>Deferred: Aligned to Future State Capabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Details of the reason of closing or deferring the request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Closed/Deferred Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cont__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Contingency allowed.</description>
        <inlineHelpText>Overall Contingency allowed in percentage.</inlineHelpText>
        <label>Overall Contingency(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country name for Request</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_after_Release_start__c</fullName>
        <description>Checks if req. create date is newer then release start date and returns true if newer</description>
        <formula>if ( Sprint__r.Release__r.Release_Start_Date__c   &gt;=  datevalue(CreatedDate),
 FALSE,
 TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created after Release start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_after_Sprint_start__c</fullName>
        <description>Checks if req. create date is newer then release start date and returns true if newer</description>
        <formula>if (  Sprint__r.Start_Date__c  &gt;= datevalue(CreatedDate ),
  false,
  true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created after Sprint start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Project_Impact_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cross Project Impact Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Project_Impact__c</fullName>
        <inlineHelpText>Select Yes if requirement will have any impact to other projects and summarize the impact in field “Cross Project Impact Summary&quot;</inlineHelpText>
        <label>Cross Project Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customization_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customization Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customization_Approved_By__c</fullName>
        <label>Customization Approved By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>C-Steering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customization_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customization Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customization_Level__c</fullName>
        <inlineHelpText>Not Applicable = no customization needed 
Low = low effort to implement &amp; simple to maintain
Medium = high effort to implement &amp; simple to maintain
High = high effort to implement &amp; difficult to maintain</inlineHelpText>
        <label>Customization Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customization_N_A__c</fullName>
        <formula>IF(ISPICKVAL(Customization_Level__c, &quot;Not Applicable&quot;), TRUE, FALSE)</formula>
        <label>Customization N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customization_Rationale__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Brief description of why customization is required</inlineHelpText>
        <label>Customization Rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Days__c</fullName>
        <formula>D_B_Hours__c / 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D+B Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Hours__c</fullName>
        <formula>Des__c  +  BUT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D+B Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Approve_Approved_to_Deploy__c</fullName>
        <formula>( TimeSpentOn_Approved_to_Deploy__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approve: Approved to Deploy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Approved_Emergency_Release__c</fullName>
        <formula>( TimeSpentOn_Approved_Emergency_Release__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Approved Emergency Release</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Close_Deployed__c</fullName>
        <formula>( TimeSpentOn_Deployed__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close: Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Close_Duplicate__c</fullName>
        <formula>( TimeSpentOn_Duplicate__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close: Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Close_Rejected__c</fullName>
        <formula>( TimeSpentOn_Rejected__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close: Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Consolidate_Approve_to_Estimate__c</fullName>
        <formula>( TimeSpentOn_Approve_to_Estimate__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consolidate: Approve to Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_Change_Request__c</fullName>
        <formula>(TimeSpentOn_Identify_Change_Request__c/(24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Identify: Change Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_Deferred__c</fullName>
        <formula>( TimeSpentOn_Deferred__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify: Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_Emergency_Request__c</fullName>
        <formula>( TimeSpentOn_Emergency_Request__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Identify: Emergency Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_New_Requirement__c</fullName>
        <formula>(TimeSpentOn_Identify_New_Requirement__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify: New Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Level_of_Effort_Complete__c</fullName>
        <formula>( TimeSpentOn_Level_of_Effort_Complete__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Effort Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Build_Production__c</fullName>
        <formula>( TimeSpentOn_Build_Production__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Build Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Build__c</fullName>
        <formula>( TimeSpentOn_Build__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Design__c</fullName>
        <formula>( TimeSpentOn_Design__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_No_Build_Req__c</fullName>
        <formula>( TimeSpentOn_No_Build_Req__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Release: No Build Req</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_SIT__c</fullName>
        <formula>( TimeSpentOn_SIT__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: SIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Test_Production__c</fullName>
        <formula>( TimeSpentOn_Test_Production__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Test Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Test__c</fullName>
        <formula>( TimeSpentOn_Test__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_UAT__c</fullName>
        <formula>( TimeSpentOn_UAT__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: UAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Submit_for_Business_Review__c</fullName>
        <formula>( TimeSpentOn_Submit_for_Business_Review__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit for Business Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Team__c</fullName>
        <label>Delivery Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Delivery__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts, Leads, Contacts</fullName>
                </value>
                <value>
                    <fullName>Approvals/IWA</fullName>
                </value>
                <value>
                    <fullName>CMD Pack 4</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                </value>
                <value>
                    <fullName>CPQ Analytics</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Analytics</label>
                </value>
                <value>
                    <fullName>CPQ - Arch &amp; Data</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Arch &amp; Data</label>
                </value>
                <value>
                    <fullName>CPQ - Architecture &amp; Integration</fullName>
                </value>
                <value>
                    <fullName>CPQ - CCB</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - CCB</label>
                </value>
                <value>
                    <fullName>CPQ Configure</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Configure</label>
                </value>
                <value>
                    <fullName>CPQ - Configure / PPI</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Configure / PPI</label>
                </value>
                <value>
                    <fullName>CPQ - Cross BG</fullName>
                </value>
                <value>
                    <fullName>CPQ Direct</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Direct</label>
                </value>
                <value>
                    <fullName>CPQ - Direct ION</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct MN</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct NSW</fullName>
                </value>
                <value>
                    <fullName>CPQ - Enterprise</fullName>
                </value>
                <value>
                    <fullName>CPQ Indirect</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Indirect</label>
                </value>
                <value>
                    <fullName>CPQ - Indirect</fullName>
                </value>
                <value>
                    <fullName>CPQ Master Data</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Master Data</label>
                </value>
                <value>
                    <fullName>CPQ - Masterdata</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI</label>
                </value>
                <value>
                    <fullName>CPQ NPI All</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI All</label>
                </value>
                <value>
                    <fullName>CPQ - NPI All</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI Direct</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI Direct</label>
                </value>
                <value>
                    <fullName>CPQ NPI FN</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI FN</label>
                </value>
                <value>
                    <fullName>CPQ - NPI FN</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI Indirect</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI Indirect</label>
                </value>
                <value>
                    <fullName>CPQ NPI ION</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI ION</label>
                </value>
                <value>
                    <fullName>CPQ - NPI ION</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI MN</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI MN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Admin Team</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                </value>
                <value>
                    <fullName>SDC</fullName>
                </value>
                <value>
                    <fullName>Nokia</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>AtoS</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>EAI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <label>Demo Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Des__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of hours estimated for the Design phase.</description>
        <inlineHelpText>Number of hours estimated for the Design phase.</inlineHelpText>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Review_Outcome__c</fullName>
        <description>Gives information on outcome of design review meeting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Information on outcome of design review meeting</inlineHelpText>
        <label>Design Review Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>